--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^16.1.4",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
+    "nuxt-delay-hydration": "^1.3.3",
     "pinia": "^2.1.4",
     "vuetify": "^3.5.1",
     "vuetify-nuxt-module": "^0.5.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/i18n": "^8.0.0-rc.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
