--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "^1.1.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.4.11",
+    "@vueuse/components": "^10.8.0",
     "dotenv": "^16.1.4",
     "pinia": "^2.1.4",
     "vuetify": "^3.5.1",
