--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "@nuxt/image": "^1.1.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.4.11",
-    "@vueuse/components": "^10.8.0",
     "dotenv": "^16.1.4",
+    "firebase": "^9.22.2",
+    "firebase-admin": "^11.9.0",
+    "nuxt-delay-hydration": "^1.3.3",
     "pinia": "^2.1.4",
     "vuetify": "^3.5.1",
     "vuetify-nuxt-module": "^0.5.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
-    "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.7.2",
     "eslint": "npm:eslint-ts-patch@^8.56.0-0",
     "eslint-plugin-format": "^0.1.0",
@@ -34,6 +34,7 @@
     "nuxt": "^3.10.1",
     "nuxt-icon": "^0.6.8",
     "sass": "^1.63.6",
+    "simple-git-hooks": "^2.9.0",
     "typescript": "^5.1.3",
     "unplugin-fonts": "^1.1.1"
   },
@@ -42,5 +43,11 @@
   },
   "resolutions": {
     "vue": "3.3.13"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
