--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
     "firebase-admin": "^11.9.0",
     "nuxt-delay-hydration": "^1.3.3",
     "pinia": "^2.1.4",
-    "vuetify": "^3.5.1",
+    "vuetify": "^3.5.5",
     "vuetify-nuxt-module": "^0.5.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@unocss/nuxt": "^0.58.5",
+    "@unocss/preset-icons": "^0.58.5",
     "@vueuse/nuxt": "^10.7.2",
     "eslint": "npm:eslint-ts-patch@^8.56.0-0",
     "eslint-plugin-format": "^0.1.0",
     "eslint-ts-patch": "^8.56.0-0",
     "lint-staged": "^15.2.0",
     "nuxt": "^3.10.1",
-    "nuxt-icon": "^0.6.8",
     "sass": "^1.63.6",
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.1.3",
