--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "typecheck": "nuxti typecheck"
   },
   "dependencies": {
-    "@nuxt/image": "^1.1.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.4.11",
     "dotenv": "^16.1.4",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
-    "nuxt-delay-hydration": "^1.3.3",
     "pinia": "^2.1.4",
     "vuetify": "^3.5.5",
     "vuetify-nuxt-module": "^0.5.6"
   },
   "devDependencies": {
+
     "@antfu/eslint-config": "^2.6.3",
+    "@iconify-json/mdi": "^1.1.64",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@unocss/nuxt": "^0.58.5",
