--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
     "typecheck": "nuxti typecheck"
   },
   "dependencies": {
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.4.11",
     "dotenv": "^16.1.4",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
-    "pinia": "^2.1.4",
+    "lodash-es": "^4.17.21",
     "vuetify": "^3.5.5",
     "vuetify-nuxt-module": "^0.5.6"
   },
   "devDependencies": {
-
     "@antfu/eslint-config": "^2.6.3",
     "@iconify-json/mdi": "^1.1.64",
     "@nuxtjs/color-mode": "^3.3.2",
