--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dotenv": "^16.1.4",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
-    "lodash-es": "^4.17.21",
     "vuetify": "^3.5.5",
     "vuetify-nuxt-module": "^0.5.6"
   },
@@ -33,6 +32,7 @@
     "eslint-ts-patch": "^8.56.0-0",
     "lint-staged": "^15.2.0",
     "nuxt": "^3.10.1",
+    "nuxt-lodash": "^2.5.3",
     "sass": "^1.63.6",
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.1.3",
