--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
     "vuetify": "^3.5.5",
-    "vuetify-nuxt-module": "^0.5.6"
+    "vuetify-nuxt-module": "^0.5.6",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
